# rag-system

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pormt.txt  pyproject.toml
.github/workflows/: ci.yml  docker.yml
app/: __init__.py  main.py
app/agents/: __init__.py  agent.py
app/api/v1/: __init__.py
app/auth/: __init__.py  rbac.py
app/cache/: __init__.py  manager.py
app/common/: __init__.py
app/common/constants/: __init__.py
app/common/enums/: __init__.py
app/common/schemas/: __init__.py
app/common/utils/: __init__.py
app/core/: __init__.py  config.py  dependency.py  exception.py  logger.py  security.py
app/credentials/: __init__.py  manager.py
app/database/: __init__.py  base.py  session.py
app/database/models/: __init__.py  conversation.py  document.py  user.py
app/events/: handlers.py
app/interfaces/: __init__.py  ai_provider.py  llm.py  social_provider.py  vector_database.py
app/memory/: __init__.py  memory.py
app/middleware/: logging_middleware.py  rate_limit_middleware.py
app/monitoring/: __init__.py  metrics.py
app/notifications/: __init__.py  manager.py
app/oauth/: __init__.py  manager.py
app/plugins/: __init__.py  loader.py
app/prompts/: __init__.py  manager.py
app/prompts/templates/: chat.j2  rag_query.j2
app/providers/ai/: __init__.py  anthropic_provider.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py
app/providers/social/: __init__.py  facebook_provider.py  telegram_provider.py  tiktok_provider.py  youtube_provider.py
app/providers/vector/: __init__.py  chroma_provider.py  factory.py  faiss_provider.py
app/rag/: __init__.py  chunking.py  document_loader.py  embedding.py  hybrid_retriever.py  pipeline.py  retriever.py
app/repositories/: __init__.py  base.py  document_repository.py
app/scheduler/: __init__.py  manager.py
app/schemas/: __init__.py  ai.py  rag.py  social.py
app/services/: __init__.py  ai_service.py  facebook_service.py  rag_service.py  telegram_service.py  tiktok_service.py  youtube_service.py
app/storage/: __init__.py  storage.py
app/tools/: __init__.py  builtin_tools.py  registry.py
app/webhook/: __init__.py  gateway.py
app/workers/: celery_app.py
app/workers/tasks/: ai_tasks.py  rag_tasks.py  social_tasks.py  workflow_tasks.py
app/workflow/: __init__.py  engine.py  loader.py  models.py  registry.py
app/workflow/nodes/: ai_node.py  base.py  (+3 more)
docker/: nginx.conf
docs/: architecture.md
docs/workflows/: facebook_rag_reply.json
frontend/: index.html
migrations/: env.py
plugins/anthropic/: plugin.json
requirements/: base.txt  dev.txt  prod.txt
tests/: conftest.py
tests/ai/: __init__.py  test_openai.py
tests/api/: test_routes.py
tests/facebook/: __init__.py  test_post.py
tests/rag/: test_chunk.py  test_embedding.py  test_retriever.py
tests/telegram/: test_send.py
(+6 files in other folders)
